<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="#C5E0DC">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" 
            android:contentDescription="@string/app_name"/>
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/txvLblNomeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_produto"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        style="@style/TextoDetalhe"/>
    
    <EditText
        android:id="@+id/edtNomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/txvLblDescricaoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao_produto"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        style="@style/TextoDetalhe"/>
    
    <EditText
        android:id="@+id/edtDescricaoProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" />
    
    <TextView
        android:id="@+id/txvLblTipoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_produto"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        style="@style/TextoDetalhe"/>
    
    <RadioGroup 
	    android:id="@+id/rdGroupTipoProduto" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <RadioButton 
	        android:id="@+id/rdButtonTipoProdutoComida"
	        android:text="@string/TipoProdutoComida"
	        android:checked="false" />
	    <RadioButton 
	        android:id="@+id/rdButtonTipoProdutoBebida"
	        android:text="@string/TipoProdutoBebida"
	        android:checked="false" />
	    <RadioButton 
	        android:id="@+id/rdButtonTipoProdutoSobremesa"
	        android:text="@string/TipoProdutoSobremesa"
	        android:checked="false" />	    
	</RadioGroup>
    

    <TextView
        android:id="@+id/txvLblPrecoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco_produto"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        style="@style/TextoDetalhe"/>

	<EditText
        android:id="@+id/edtprecoProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
            
    <TextView
        android:id="@+id/txvLblUnidadeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unidade_produto"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        style="@style/TextoDetalhe"/>
    
  	<RadioGroup 
	    android:id="@+id/rdGroupUnidadeProduto" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <RadioButton 
	        android:id="@+id/rdButtonUnidadeProdutoPorcao"
	        android:text="@string/UnidadeProdutoPorcao"
	        android:checked="false" />
	    <RadioButton 
	        android:id="@+id/rdButtonTipoProdutoUnidade"
	        android:text="@string/UnidadeProdutoUnidade"
	        android:checked="false" />	  
	</RadioGroup>

    
     <TextView
        android:id="@+id/txvLblDisponibilidadeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disponibilidade_produto"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        style="@style/TextoDetalhe"/>
     
     <RadioGroup 
	    android:id="@+id/rdGroupDisponibilidadeProduto" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <RadioButton 
	        android:id="@+id/rdButtonDisponibilidadeProdutoSim"
	        android:text="@string/sim"
	        android:checked="false" />
	    <RadioButton 
	        android:id="@+id/rdButtonDisponibilidadeProdutoNao"
	        android:text="@string/nao"
	        android:checked="false" />	  
	</RadioGroup>
          
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
         
	     <TextView
	        android:id="@+id/txvLblClassificacaoProduto"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/classificacao_produto"
	        android:textAppearance="?android:attr/textAppearanceMedium" 
	        style="@style/TextoDetalhe"/>
	
	     <RatingBar
	         android:id="@+id/rtnBarClassficacaoProduto"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         style="?android:attr/ratingBarStyleSmall" />

     </LinearLayout>

     <Button
         android:id="@+id/btnCadastrarEstabelecimento"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/confirmar"/>    

</LinearLayout>

</ScrollView>