<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="#774F38"
        android:paddingBottom="5dip"
        android:paddingTop="5dip">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:src="@drawable/icon128" 
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dip"
            android:text="@string/app_name"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            style="@style/BarraTopo"/>

    </LinearLayout>
    
    <TextView 
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/TextoSubTitulo"
        android:layout_marginTop="10dip"
        />
    
    <EditText 
        android:id="@+id/edtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/digitarLogin"
        />
    
    <TextView 
        android:id="@+id/txtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        style="@style/TextoSubTitulo"
        android:layout_marginTop="10dip"
        />
    
    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/digitarSenha"
        android:inputType="textPassword" />
    
    <Button 
	    android:id="@+id/btnEntrar"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/confirmar"
	    android:onClick="efetuarLogin"
	    android:layout_marginTop="10dip"	    
	    />
    
	<Button 
	    android:id="@+id/btnLimpar"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/limpar"
	    android:onClick="limpar"
	    android:layout_marginTop="5dip" 
	      
	    />
    
</LinearLayout>