<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="#C5E0DC">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" 
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <Gallery
        android:id="@+id/gallery1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnCardapio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="abrirCardapio"
        android:text="Button" />
        
    <TextView
        android:id="@+id/txvLblNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_estabelecimento"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#774F38"/>

    <TextView
        android:id="@+id/txvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:paddingBottom="5pt"/>

    <TextView
        android:id="@+id/txvLblEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endereco_estabelecimento"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#774F38"/>

    <TextView
        android:id="@+id/txvEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:paddingBottom="5pt"/>

    <TextView
        android:id="@+id/txvLblCidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cidade_estabelecimento"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#774F38"/>

    <TextView
        android:id="@+id/txvCidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:paddingBottom="5pt"/>
    
    <TextView
        android:id="@+id/txvLblEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado_estabelecimento"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#774F38"/>
    
    <TextView
        android:id="@+id/txvEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:paddingBottom="5pt"/>

    <TextView
        android:id="@+id/txvLblTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone_estabelecimento"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#774F38"/>

    <TextView
        android:id="@+id/txvTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:paddingBottom="5pt"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>