<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="#774F38"
        android:paddingBottom="5dip"
        android:paddingTop="5dip">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:src="@drawable/icon128" 
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dip"
            android:text="@string/app_name"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            style="@style/BarraTopo"/>
        
        <TextView
            android:id="@+id/txvNomeUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" 
            style="@style/TextoDetalheBranco"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txvNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_marginBottom="1dip"
        android:layout_marginTop="5dip"
        style="@style/TextoTitulo"/>
    
    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="?android:attr/ratingBarStyleSmall"/>

    <Gallery
        android:id="@+id/galEstabelecimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"/>
    
    <TextView
        android:id="@+id/txvEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        style="@style/TextoDetalhe"/>

    <TextView
        android:id="@+id/txvCidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        style="@style/TextoDetalhe"/>

    <TextView
        android:id="@+id/txvEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        style="@style/TextoDetalhe"/>

    <TextView
        android:id="@+id/txvTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_marginBottom="5pt"
        style="@style/TextoDetalhe"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cartoes" 
        android:contentDescription="@string/desCartoes"
        android:layout_gravity="center"/>
    
    <Button
        android:id="@+id/btnCardapio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="abrirCardapio"
        android:text="@string/txtBtCardapio"
        android:layout_marginTop="5dip"/>

</LinearLayout>